# ModebusRelay

./: README.md
doc/: html.txt  modebus.txt
src/: CMakeLists.txt  SwitchButton.cpp  SwitchButton.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  master.pro  modbus_relay.pro  modbuscvt.cpp  modbuscvt.h  relay4.cpp  relay4.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/Resource/: main_widget_en.ts  main_widget_zh.ts
src/cmake/: FindOpencv.cmake  FindQT.cmake  LinuxPrepare.cmake  SetBoost.cmake  SetCUDA.cmake  SetMFC.cmake  SetPthreads.cmake  env.cfg.txt
src/translations/: main_widget_en.ts  main_widget_zh.ts
